# phone-control

./: .gitignore  README.md  pyproject.toml
src/phone_control/: __init__.py  adb.py  app.py
tests/: test_adb.py  test_app.py
