[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-control"
version = "0.1.0"
description = "Android phone screen mirroring and control from a desktop via ADB."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Scorpio"}]
keywords = ["android", "adb", "screen-mirroring", "remote-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
phone-control = "phone_control.app:main"

[tool.setuptools.packages.find]
where = ["src"]
